; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/fatfs/extr_myfatfs.c_myfatfs_umount.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/fatfs/extr_myfatfs.c_myfatfs_umount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }
%struct.vfs_vol = type { i32 }

@myvol = common dso_local global %struct.TYPE_2__* null, align 8
@last_result = common dso_local global i64 0, align 8
@FR_OK = common dso_local global i64 0, align 8
@VFS_RES_OK = common dso_local global i32 0, align 4
@VFS_RES_ERR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vfs_vol*)* @myfatfs_umount to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @myfatfs_umount(%struct.vfs_vol* %0) #0 {
  %2 = alloca %struct.vfs_vol*, align 8
  store %struct.vfs_vol* %0, %struct.vfs_vol** %2, align 8
  %3 = load %struct.vfs_vol*, %struct.vfs_vol** %2, align 8
  %4 = call i32 @GET_FATFS_FS(%struct.vfs_vol* %3)
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @myvol, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  %8 = call i64 @f_mount(i32* null, i8* %7, i32 0)
  store i64 %8, i64* @last_result, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @myvol, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = call i32 @free(i8* %11)
  %13 = load %struct.vfs_vol*, %struct.vfs_vol** %2, align 8
  %14 = bitcast %struct.vfs_vol* %13 to i8*
  %15 = call i32 @free(i8* %14)
  %16 = load i64, i64* @last_result, align 8
  %17 = load i64, i64* @FR_OK, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %1
  %20 = load i32, i32* @VFS_RES_OK, align 4
  br label %23

21:                                               ; preds = %1
  %22 = load i32, i32* @VFS_RES_ERR, align 4
  br label %23

23:                                               ; preds = %21, %19
  %24 = phi i32 [ %20, %19 ], [ %22, %21 ]
  ret i32 %24
}

declare dso_local i32 @GET_FATFS_FS(%struct.vfs_vol*) #1

declare dso_local i64 @f_mount(i32*, i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
